# lvgl-sdl-example

./: .gitignore  .gitmodules  CMakeLists.txt  lv_conf.h  lv_demo_conf.h  main.c
input_drv/: indev_sdl.c  indev_sdl.h  syswm_win.c
